@@ -1,4 +1,4 @@
-// Copyright (C) 2006 Philip Aston
+// Copyright (C) 2006 - 2008 Philip Aston
 // All rights reserved.
 //
 // This file is part of The Grinder software distribution. Refer to
@@ -29,18 +29,15 @@ package net.grinder.util;
  */
 public final class NanoTimeTimeAuthority implements TimeAuthority {
 
+  private final long m_epochOffset =
+    System.currentTimeMillis() - System.nanoTime() / 1000000;
+
   /**
    * Return the current time in milliseconds.
    *
-   * <p>
-   * This is an abstraction over {@link System#currentTimeMillis()} and the J2SE
-   * 5 <code>System.nanoTime()</code> method.
-   * </p>
-   *
-   * @return The time. The base time is arbitrary, in a similar fashion to that
-   *         of <code>nanoTime</code>.
+   * @return The time. The base time is the Epoch.
    */
   public long getTimeInMilliseconds() {
-    return System.nanoTime() / 1000000;
+    return System.nanoTime() / 1000000 + m_epochOffset;
   }
 }
